# fsmreasonbench

./: .gitignore  ARTIFACT_VERSION  CITATION.cff  LICENSE  PROJECT_STATUS.md  README-RELEASE.md  README.md  REVIEWER.md  codemeta.json  pyproject.toml  run_llama_missing.sh  run_local_matrix_n100_t02.sh
baselines/: README.md
cohorts/: MANIFEST_SPEC.md  README.md
docs/: ARTIFACT_RELEASE_REPORT.md  EXPERIMENTAL_FREEZE_TOSEM.md  IMPLEMENTATION_ROADMAP.md  PAPER_FREEZE_AUDIT.md  README.md  REVIEWER.md  TOSEM_A1_EXPERIMENT_PLAN.md  TOSEM_ARTIFACT_BRANCH_READINESS.md  TOSEM_EXPERIMENT_EXTENSION_PLAN.md  _archival_qa_audit.json  _pytest_qa_summary.txt  ablation_f1_oracle_verdict_format_control_claude_n100_v1.md  ablation_f1_r2_attribution_claude_n100_v1.md  c2_existential_universal_claude_n100_v1.md  c2_existential_universal_stratified_analysis.json  c2_existential_universal_stratified_tables.csv  capability_surface_report.md  capability_surface_summary.csv  certificate_class_complexity_analysis.json  certificate_class_complexity_analysis.md  certificate_class_complexity_tables.csv  competent_ceiling_report.md  competent_ceiling_summary.csv  competent_ceiling_summary.json  constructible_equivalence_protocol_diagnostic.md  constructible_equivalence_witness_experiment.md  dataset_card.md  equivalence_hash_mismatch_decomposition.json  equivalence_hash_mismatch_decomposition.md  equivalence_hash_mismatch_decomposition_tables.csv  extractability_audit.md  extractability_audit_n100_t02.md  f1_bisimulation_witness_verifier_audit.json  f1_bisimulation_witness_verifier_audit.md  (+58 more)
(+456 files in other folders)
