[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsmreasonbench"
version = "0.2.0-dev"
description = "FSMReasonBench — reasoning over executable finite-state machines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "jsonschema>=4.20",
]

[project.scripts]
fsmreasonbench-generate-one = "fsmreasonbench.cli.generate_one:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "matplotlib>=3.8",
]
plot = [
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
